--- a/cs230/1.neural-networks-deep-learning/Building+your+Deep+Neural+Network+-+Step+by+Step+v8.ipynb
+++ b/cs230/1.neural-networks-deep-learning/Building+your+Deep+Neural+Network+-+Step+by+Step+v8.ipynb
@@ -44,18 +44,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.5/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
-      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n",
-      "/opt/conda/lib/python3.5/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
-      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
+      "/anaconda/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
      ]
     }
    ],
@@ -130,10 +126,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: initialize_parameters\n",
@@ -177,9 +171,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -189,10 +182,10 @@
      "text": [
       "W1 = [[ 0.01624345 -0.00611756 -0.00528172]\n",
       " [-0.01072969  0.00865408 -0.02301539]]\n",
-      "b1 = [[ 0.]\n",
-      " [ 0.]]\n",
+      "b1 = [[0.]\n",
+      " [0.]]\n",
       "W2 = [[ 0.01744812 -0.00761207]]\n",
-      "b2 = [[ 0.]]\n"
+      "b2 = [[0.]]\n"
      ]
     }
    ],
@@ -347,10 +340,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: initialize_parameters_deep\n",
@@ -385,10 +376,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -398,16 +387,16 @@
       " [-0.00354759 -0.00082741 -0.00627001 -0.00043818 -0.00477218]\n",
       " [-0.01313865  0.00884622  0.00881318  0.01709573  0.00050034]\n",
       " [-0.00404677 -0.0054536  -0.01546477  0.00982367 -0.01101068]]\n",
-      "b1 = [[ 0.]\n",
-      " [ 0.]\n",
-      " [ 0.]\n",
-      " [ 0.]]\n",
+      "b1 = [[0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]]\n",
       "W2 = [[-0.01185047 -0.0020565   0.01486148  0.00236716]\n",
       " [-0.01023785 -0.00712993  0.00625245 -0.00160513]\n",
       " [-0.00768836 -0.00230031  0.00745056  0.01976111]]\n",
-      "b2 = [[ 0.]\n",
-      " [ 0.]\n",
-      " [ 0.]]\n"
+      "b2 = [[0.]\n",
+      " [0.]\n",
+      " [0.]]\n"
      ]
     }
    ],
@@ -486,10 +475,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: linear_forward\n",
@@ -520,10 +507,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -586,10 +571,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: linear_activation_forward\n",
@@ -632,17 +615,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "With sigmoid: A = [[ 0.96890023  0.11013289]]\n",
-      "With ReLU: A = [[ 3.43896131  0.        ]]\n"
+      "With sigmoid: A = [[0.96890023 0.11013289]]\n",
+      "With ReLU: A = [[3.43896131 0.        ]]\n"
      ]
     }
    ],
@@ -704,10 +685,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: L_model_forward\n",
@@ -753,16 +732,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AL = [[ 0.03921668  0.70498921  0.19734387  0.04728177]]\n",
+      "AL = [[0.03921668 0.70498921 0.19734387 0.04728177]]\n",
       "Length of caches list = 3\n"
      ]
     }
@@ -810,10 +787,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: compute_cost\n",
@@ -845,16 +820,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cost = 0.414931599615\n"
+      "cost = 0.414931599615397\n"
      ]
     }
    ],
@@ -937,10 +910,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: linear_backward\n",
@@ -976,10 +947,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -989,7 +958,7 @@
       " [-0.40506361  0.15255393]\n",
       " [ 2.37496825 -0.89445391]]\n",
       "dW = [[-0.10076895  1.40685096  1.64992505]]\n",
-      "db = [[ 0.50629448]]\n"
+      "db = [[0.50629448]]\n"
      ]
     }
    ],
@@ -1060,10 +1029,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: linear_activation_backward\n",
@@ -1101,10 +1068,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1229,10 +1194,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: L_model_backward\n",
@@ -1287,18 +1250,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dW1 = [[ 0.41010002  0.07807203  0.13798444  0.10502167]\n",
-      " [ 0.          0.          0.          0.        ]\n",
-      " [ 0.05283652  0.01005865  0.01777766  0.0135308 ]]\n",
+      "dW1 = [[0.41010002 0.07807203 0.13798444 0.10502167]\n",
+      " [0.         0.         0.         0.        ]\n",
+      " [0.05283652 0.01005865 0.01777766 0.0135308 ]]\n",
       "db1 = [[-0.22007063]\n",
       " [ 0.        ]\n",
       " [-0.02835349]]\n",
@@ -1373,10 +1334,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: update_parameters\n",
@@ -1408,10 +1367,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1510,7 +1467,43 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "position": {
+    "height": "668px",
+    "left": "1070px",
+    "right": "16px",
+    "top": "120px",
+    "width": "354px"
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
